package com.deepknow.agentoz.api.dto;

import lombok.Data;

import java.io.Serializable;
import java.util.List;
import java.util.Map;

/**
 * Agenté…ç½®ï¼ˆé‡æ„ç‰ˆ - å®Œå…¨å¯¹é½Codex-Agentçš„SessionConfigï¼‰
 *
 * <p>è¿™ä¸ªDTOåŒ…å«æ‰€æœ‰ä¼ é€’ç»™Codex-Agentè®¡ç®—èŠ‚ç‚¹çš„é…ç½®å‚æ•°ã€‚</p>
 *
 * <h3>ğŸ”„ ä¸Protoæ˜ å°„</h3>
 * <pre>
 * AgentConfigDTO (APIå±‚)      SessionConfig (Proto)
 *   â”œâ”€ provider               â†’   ProviderConfig
 *   â”œâ”€ model                  â†’   string model
 *   â”œâ”€ cwd                    â†’   string cwd
 *   â”œâ”€ approvalPolicy         â†’   ApprovalPolicy (enum)
 *   â”œâ”€ sandboxPolicy          â†’   SandboxPolicy (enum)
 *   â”œâ”€ developerInstructions  â†’   string developer_instructions
 *   â”œâ”€ userInstructions       â†’   string user_instructions
 *   â”œâ”€ baseInstructions       â†’   string base_instructions
 *   â”œâ”€ reasoningEffort        â†’   ReasoningEffort (enum)
 *   â”œâ”€ reasoningSummary       â†’   ReasoningSummary (enum)
 *   â”œâ”€ mcpServers             â†’   map&lt;string, McpServerConfig&gt;
 *   â””â”€ ... æ›´å¤šå­—æ®µ
 * </pre>
 *
 * <h3>ğŸ¯ è®¾è®¡åŸåˆ™</h3>
 * <ul>
 *   <li><b>å¼ºç±»å‹</b>: æšä¸¾ä½¿ç”¨Stringå­˜å‚¨ï¼Œä¾¿äºä¼ è¾“</li>
 *   <li><b>å®Œæ•´å¯¹é½</b>: åŒ…å«Protoå®šä¹‰çš„æ‰€æœ‰å­—æ®µ</li>
 *   <li><b>å¯é€‰å­—æ®µ</b>: ä½¿ç”¨åŒ…è£…ç±»æ”¯æŒnullå€¼</li>
 * </ul>
 */
@Data
public class AgentConfigDTO implements Serializable {
    private static final long serialVersionUID = 1L;

    // ============================================================
    // 1. åŸºç¡€ç¯å¢ƒé…ç½® - Basic Environment
    // ============================================================

    /**
     * æ¨¡å‹æä¾›å•†é…ç½®
     */
    private ProviderConfigDTO provider;

    /**
     * æ¨¡å‹åç§°
     * ç¤ºä¾‹: "qwen-max", "gpt-4o", "deepseek-chat"
     */
    private String model;

    /**
     * å·¥ä½œç›®å½•ï¼ˆç»å¯¹è·¯å¾„ï¼‰
     * ç¤ºä¾‹: "/workspace/coder-agent"
     */
    private String cwd;

    // ============================================================
    // 2. ç­–ç•¥é…ç½® - Policy Configuration
    // ============================================================

    /**
     * å®¡æ‰¹ç­–ç•¥
     * æšä¸¾å€¼: "AUTO_APPROVE", "MANUAL_APPROVE", "BLOCK_ALL"
     */
    private String approvalPolicy;

    /**
     * æ²™ç®±ç­–ç•¥
     * æšä¸¾å€¼: "READ_ONLY", "SANDBOXED", "INSECURE"
     */
    private String sandboxPolicy;

    // ============================================================
    // 3. æŒ‡ä»¤é…ç½® - Instructions Configuration
    // ============================================================

    /**
     * å¼€å‘è€…æŒ‡ä»¤ï¼ˆæœ€é«˜ä¼˜å…ˆçº§ï¼‰
     * ç”¨äºåº•å±‚æ§åˆ¶é€»è¾‘ï¼Œæ™®é€šç”¨æˆ·ä¸å¯è§
     */
    private String developerInstructions;

    /**
     * ç”¨æˆ·æŒ‡ä»¤
     * ç»™Agentçš„ä¸šåŠ¡çº§æŒ‡ä»¤
     */
    private String userInstructions;

    /**
     * åŸºç¡€æŒ‡ä»¤æ¨¡æ¿
     * è¦†ç›–é»˜è®¤è¡Œä¸ºæ¨¡æ¿
     */
    private String baseInstructions;

    // ============================================================
    // 4. æ¨ç†é…ç½® - Reasoning Configuration
    // ============================================================

    /**
     * æ¨ç†å¼ºåº¦
     * æšä¸¾å€¼: "REASONING_NONE", "MINIMAL", "LOW", "MEDIUM", "HIGH"
     */
    private String reasoningEffort;

    /**
     * æ¨ç†æ‘˜è¦æ¨¡å¼
     * æšä¸¾å€¼: "AUTO", "CONCISE", "DETAILED", "REASONING_SUMMARY_NONE"
     */
    private String reasoningSummary;

    /**
     * å‹ç¼©æç¤ºè¯è¦†ç›–
     */
    private String compactPrompt;

    // ============================================================
    // 5. é«˜çº§é…ç½® - Advanced Configuration
    // ============================================================

    /**
     * æ¨¡å‹èƒ½åŠ›è¦†ç›–é…ç½®
     * åŒ…å«: shell_type, supports_parallel_tool_calls, context_windowç­‰
     */
    private ModelOverridesDTO modelOverrides;

    /**
     * MCPæœåŠ¡å™¨é…ç½®æ˜ å°„
     * key: æœåŠ¡å™¨åç§° (å¦‚ "git", "filesystem")
     * value: MCPæœåŠ¡å™¨é…ç½®
     */
    private Map<String, McpServerConfigDTO> mcpServers;

    /**
     * ä¼šè¯æ¥æºæ ‡è¯†
     * åŒ…å«: source_type ("API", "IDE", "CLI"), integration_nameç­‰
     */
    private SessionSourceDTO sessionSource;

    // ============================================================
    // 6. é…ç½®å…ƒæ•°æ®
    // ============================================================

    /**
     * é…ç½®åç§°ï¼ˆäººç±»å¯è¯»ï¼‰
     * ç¤ºä¾‹: "Qwen-Max-é«˜æ¨ç†æ¨¡å¼"
     */
    private String configName;

    /**
     * é…ç½®æè¿°
     */
    private String description;

    /**
     * é…ç½®æ ‡ç­¾ï¼ˆé€—å·åˆ†éš”ï¼‰
     * ç¤ºä¾‹: "coding,high-reasoning"
     */
    private String tags;
}
