package com.deepknow.agentoz.executor;

import com.deepknow.agentoz.dto.InternalCodexEvent;
import com.deepknow.agentoz.infra.client.CodexAgentClient;
import com.deepknow.agentoz.infra.converter.grpc.InternalCodexEventConverter;
import com.deepknow.agentoz.manager.AgentExecutionManager;
import com.deepknow.agentoz.manager.AgentTaskBuilder;
import com.deepknow.agentoz.model.AgentEntity;
import codex.agent.RunTaskRequest;
import codex.agent.RunTaskResponse;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.apache.dubbo.common.stream.StreamObserver;
import org.springframework.stereotype.Component;

/**
 * Agent ä»»åŠ¡æ‰§è¡Œå™¨ï¼ˆJava 21 é‡å†™ç‰ˆï¼‰
 *
 * <p>èŒè´£ï¼š</p>
 * <ul>
 *   <li>æ‰§è¡Œå•ä¸ª Agent ä»»åŠ¡</li>
 *   <li>è°ƒç”¨ Codex RPC å¹¶å¤„ç†å“åº”æµ</li>
 *   <li>ç®¡ç†ä»»åŠ¡ç”Ÿå‘½å‘¨æœŸï¼ˆå¼€å§‹/å®Œæˆ/å¤±è´¥ï¼‰</li>
 *   <li>ä½¿ç”¨åŒæ­¥ä»£ç é£æ ¼ï¼ˆè¿è¡Œåœ¨ Virtual Thread ä¸Šï¼‰</li>
 * </ul>
 *
 * <h3>ğŸš€ Java 21 ä¼˜åŠ¿</h3>
 * <ul>
 *   <li>Virtual Threads - è½»é‡çº§å¹¶å‘ï¼Œæ— éœ€å›è°ƒåœ°ç‹±</li>
 *   <li>åŒæ­¥ä»£ç é£æ ¼ - æ›´æ˜“è¯»æ˜“ç»´æŠ¤</li>
 *   <li>è‡ªåŠ¨é˜»å¡è½¬å‘ - æ— éœ€æ‰‹åŠ¨ç®¡ç†çº¿ç¨‹æ± </li>
 * </ul>
 */
@Slf4j
@Component
@RequiredArgsConstructor
public class AgentTaskExecutor {

    private final AgentTaskBuilder taskBuilder;
    private final CodexAgentClient codexAgentClient;
    private final AgentExecutionManager executionManager;
    private final com.deepknow.agentoz.orchestrator.OrchestrationSessionManager sessionManager;

    /**
     * æ‰§è¡Œä»»åŠ¡
     *
     * @param context ä»»åŠ¡ä¸Šä¸‹æ–‡
     * @param eventHandler äº‹ä»¶å¤„ç†å™¨
     */
    public void execute(AgentTaskBuilder.TaskContext context, EventHandler eventHandler) {
        log.info("[TaskExecutor] å¼€å§‹æ‰§è¡Œ: taskId={}, agentId={}",
                context.taskId(), context.agentId());

        try {
            // 1. æ„å»ºè¯·æ±‚
            RunTaskRequest request = taskBuilder.buildTaskRequest(context);
            AgentEntity agent = taskBuilder.loadAgent(context.agentId());

            // 2. æ‰§è¡Œ RPC è°ƒç”¨å¹¶å¤„ç†å“åº”
            codexAgentClient.runTask(
                    context.conversationId(),
                    request,
                    new StreamObserver<>() {
                        private final StringBuilder resultBuilder = new StringBuilder();

                        @Override
                        public void onNext(RunTaskResponse response) {
                            try {
                                // æ£€æŸ¥æ˜¯å¦åº”è¯¥åœæ­¢ä»»åŠ¡
                                com.deepknow.agentoz.model.OrchestrationSession session =
                                        sessionManager.getSession(context.conversationId());
                                if (session != null && session.shouldStop()) {
                                    log.info("[TaskExecutor] ä»»åŠ¡å·²å–æ¶ˆï¼Œåœæ­¢å¤„ç†: taskId={}, reason={}",
                                            context.taskId(), session.getCancelReason());
                                    return; // åœæ­¢å¤„ç†åç»­äº‹ä»¶
                                }

                                // è½¬æ¢äº‹ä»¶
                                InternalCodexEvent event = InternalCodexEventConverter.toInternalEvent(response);
                                if (event == null) return;

                                // è®¾ç½®å…ƒæ•°æ®
                                event.setSenderName(agent.getAgentName());
                                event.setAgentId(agent.getAgentId());

                                // æŒä¹…åŒ–
                                executionManager.persistEvent(
                                        context.conversationId(),
                                        agent.getAgentId(),
                                        agent.getAgentName(),
                                        event
                                );

                                // æ”¶é›†ç»“æœ
                                collectText(event, resultBuilder);

                                // å¤„ç†å®Œæˆäº‹ä»¶
                                if (event.getStatus() == InternalCodexEvent.Status.FINISHED) {
                                    handleFinished(agent, event);
                                }

                                // è§¦å‘äº‹ä»¶å¤„ç†
                                eventHandler.onEvent(event);

                            } catch (Exception e) {
                                log.error("[TaskExecutor] äº‹ä»¶å¤„ç†å¤±è´¥: taskId={}",
                                        context.taskId(), e);
                            }
                        }

                        @Override
                        public void onError(Throwable t) {
                            // æ£€æŸ¥æ˜¯å¦æ˜¯å› ä¸ºå–æ¶ˆå¯¼è‡´çš„é”™è¯¯
                            com.deepknow.agentoz.model.OrchestrationSession session =
                                    sessionManager.getSession(context.conversationId());
                            if (session != null && session.shouldStop()) {
                                log.info("[TaskExecutor] ä»»åŠ¡å·²å–æ¶ˆï¼Œä¸å¤„ç†é”™è¯¯: taskId={}", context.taskId());
                                return;
                            }

                            log.error("[TaskExecutor] RPC è°ƒç”¨å¤±è´¥: taskId={}",
                                    context.taskId(), t);
                            eventHandler.onError(t);
                        }

                        @Override
                        public void onCompleted() {
                            // æ£€æŸ¥æ˜¯å¦å·²å–æ¶ˆ
                            com.deepknow.agentoz.model.OrchestrationSession session =
                                    sessionManager.getSession(context.conversationId());
                            if (session != null && session.shouldStop()) {
                                log.info("[TaskExecutor] ä»»åŠ¡å·²å–æ¶ˆï¼Œä¸å¤„ç†å®Œæˆ: taskId={}", context.taskId());
                                return;
                            }

                            log.info("[TaskExecutor] ä»»åŠ¡å®Œæˆ: taskId={}, resultLength={}",
                                    context.taskId(), resultBuilder.length());
                            eventHandler.onComplete(resultBuilder.toString());
                        }
                    }
            );

        } catch (Exception e) {
            log.error("[TaskExecutor] ä»»åŠ¡å¯åŠ¨å¤±è´¥: taskId={}",
                    context.taskId(), e);
            eventHandler.onError(e);
        }
    }

    /**
     * å¤„ç†ä»»åŠ¡å®Œæˆäº‹ä»¶
     */
    private void handleFinished(AgentEntity agent, InternalCodexEvent event) {
        if (event.getUpdatedRollout() != null && event.getUpdatedRollout().length > 0) {
            agent.setActiveContextFromBytes(event.getUpdatedRollout());
            executionManager.updateAgentActiveContext(
                    agent.getAgentId(),
                    event.getUpdatedRollout()
            );
            log.info("[TaskExecutor] activeContext å·²æ›´æ–°: agentId={}, size={}",
                    agent.getAgentId(), event.getUpdatedRollout().length);
        }
    }

    /**
     * ä»äº‹ä»¶ä¸­æå–æ–‡æœ¬
     */
    private void collectText(InternalCodexEvent event, StringBuilder sb) {
        try {
            String json = event.getRawEventJson();
            if (json == null) return;

            var mapper = new com.fasterxml.jackson.databind.ObjectMapper();
            var node = mapper.readTree(json);

            // å°è¯•å¤šç§æ–‡æœ¬å­—æ®µ
            String[] paths = {"item.text", "delta.text", "content"};
            for (String path : paths) {
                String[] parts = path.split("\\.");
                var current = node;
                for (String part : parts) {
                    current = current.path(part);
                }
                String text = current.asText();
                if (!text.isEmpty() && !text.equals("null")) {
                    if (sb.indexOf(text) == -1) {
                        sb.append(text);
                    }
                    return;
                }
            }
        } catch (Exception e) {
            // å¿½ç•¥è§£æé”™è¯¯
        }
    }

    /**
     * äº‹ä»¶å¤„ç†å™¨æ¥å£
     */
    public interface EventHandler {
        void onEvent(InternalCodexEvent event);
        void onComplete(String result);
        void onError(Throwable t);
    }
}
