package com.deepknow.agentoz.infra.adapter.grpc;

import io.grpc.stub.StreamObserver;

/**
 * Codex Agent RPC æœåŠ¡æ¥å£
 *
 * <p>è¿™æ˜¯ Dubbo Triple åè®®çš„ Java æ¥å£å®šä¹‰,ç”¨äºé€‚é…å¤–éƒ¨ Rust gRPC æœåŠ¡ã€‚
 * é€šè¿‡è¿™ä¸ªæ¥å£,agentoz-server å¯ä»¥ä½¿ç”¨ Dubbo Triple åè®®è°ƒç”¨ codex-agent (Rust)ã€‚</p>
 *
 * <h3>ğŸ”Œ æŠ€æœ¯æ¶æ„</h3>
 * <pre>
 * agentoz-server (Java)           codex-agent (Rust)
 *      |                                   |
 *      |-- Dubbo Triple --> HTTP/2 --> gRPC
 *      |         (æœ¬æ¥å£)               (Rustå®ç°)
 * </pre>
 *
 * <h3>ğŸ“¦ åŒ…è·¯å¾„è®¾è®¡</h3>
 * <ul>
 *   <li>{@code infra.adapter.grpc} - è¡¨æ˜è¿™æ˜¯åŸºç¡€è®¾æ–½å±‚çš„ gRPC åè®®é€‚é…å™¨</li>
 *   <li>ä¸æ˜¯ {@code service} - å› ä¸ºè¿™åªæ˜¯ RPC æ¥å£å®šä¹‰,ä¸æ˜¯ä¸šåŠ¡é€»è¾‘</li>
 * </ul>
 *
 * <h3>âš ï¸ é‡è¦çº¦æŸ</h3>
 * <ol>
 *   <li>æœ¬æ¥å£çš„æ–¹æ³•ç­¾åå¿…é¡»ä¸ Rust ä¾§çš„ gRPC service å®šä¹‰å®Œå…¨ä¸€è‡´</li>
 *   <li>proto æ–‡ä»¶çš„ {@code java_package} é€‰é¡¹å¿…é¡»æŒ‡å‘æœ¬åŒ…: {@code com.deepknow.agentoz.infra.adapter.grpc}</li>
 *   <li>ä¿®æ”¹æœ¬æ¥å£å‰,å¿…é¡»å…ˆåŒæ­¥æ›´æ–° Rust proto å®šä¹‰</li>
 * </ol>
 *
 * @see <a href="https://github.com/QwenLM/Qwen-Agent">Qwen-Agent</a>
 * @see CodexAgentClient
 */
public interface CodexAgentRpcService {

    /**
     * æ‰§è¡Œä»£ç†ä»»åŠ¡ (Unary Request -> Streaming Response)
     *
     * <p>å®¢æˆ·ç«¯å‘é€ä¸€ä¸ªä»»åŠ¡è¯·æ±‚,æœåŠ¡ç«¯æµå¼è¿”å›å¤šä¸ªå“åº”ã€‚</p>
     *
     * <h3>ğŸ”„ è°ƒç”¨æµç¨‹</h3>
     * <pre>
     * Client                  Server
     *   |                       |
     *   |--- RunTaskRequest --->|
     *   |                       |
     *   |<-- RunTaskResponse ---|
     *   |<-- RunTaskResponse ---|
     *   |<-- RunTaskResponse ---|
     *   |                       |
     *   |<------ complete ------|
     * </pre>
     *
     * @param request ä»»åŠ¡æ‰§è¡Œè¯·æ±‚
     * @param responseObserver æµå¼å“åº”è§‚å¯Ÿè€…
     */
    default void runTask(RunTaskRequest request, StreamObserver<RunTaskResponse> responseObserver) {
        throw new UnsupportedOperationException("CodexAgentRpcService.runTask() æœªå®ç° - æ­¤æ¥å£ä»…ç”¨äº Dubbo Triple åè®®æ˜ å°„,å®é™…å®ç°ç”± Rust gRPC æœåŠ¡æä¾›");
    }

    /**
     * å®æ—¶èŠå¤© (Bidirectional Streaming)
     *
     * <p>å®¢æˆ·ç«¯å’ŒæœåŠ¡ç«¯å¯ä»¥åŒæ—¶å‘é€å’Œæ¥æ”¶æ¶ˆæ¯,æ”¯æŒå®æ—¶å¯¹è¯åœºæ™¯ã€‚</p>
     *
     * <h3>ğŸ”„ è°ƒç”¨æµç¨‹</h3>
     * <pre>
     * Client                  Server
     *   |                       |
     *   |<-- stream open ------>|
     *   |--- ChatRequest ------>|
     *   |<-- ChatResponse ------|
     *   |--- ChatRequest ------>|
     *   |<-- ChatResponse ------|
     *   |                       |
     *   |<------ close -------->|
     * </pre>
     *
     * @param responseObserver æµå¼å“åº”è§‚å¯Ÿè€…
     * @return è¯·æ±‚æµè§‚å¯Ÿè€…,å®¢æˆ·ç«¯å¯ä»¥é€šè¿‡å®ƒå‘é€å¤šä¸ªè¯·æ±‚
     */
    default StreamObserver<ChatRequest> realtimeChat(StreamObserver<ChatResponse> responseObserver) {
        throw new UnsupportedOperationException("CodexAgentRpcService.realtimeChat() æœªå®ç° - æ­¤æ¥å£ä»…ç”¨äº Dubbo Triple åè®®æ˜ å°„,å®é™…å®ç°ç”± Rust gRPC æœåŠ¡æä¾›");
    }
}
