package com.deepknow.agentoz.infra.converter.grpc;

import com.deepknow.agentoz.api.dto.McpServerConfigDTO;
import com.deepknow.agentoz.dto.config.McpServerConfigVO;
import com.deepknow.agentoz.dto.config.ModelOverridesVO;
import com.deepknow.agentoz.dto.config.ProviderConfigVO;
import com.deepknow.agentoz.dto.config.SessionSourceVO;
import codex.agent.*;
import com.deepknow.agentoz.model.AgentConfigEntity;
import com.fasterxml.jackson.core.type.TypeReference;
import com.fasterxml.jackson.databind.ObjectMapper;
import lombok.extern.slf4j.Slf4j;

import java.util.Map;

/**
 * å®ä½“åˆ°Protoçš„è½¬æ¢å™¨
 *
 * <p>è´Ÿè´£å°†AgentOZçš„å®ä½“ç±»è½¬æ¢ä¸ºCodex-Agentçš„Protoå¼ºç±»å‹å®šä¹‰ã€‚</p>
 *
 * <h3>ğŸ”„ è½¬æ¢æ˜ å°„</h3>
 * <pre>
 * AgentConfigEntity          â†’  SessionConfig (Proto)
 *   â”œâ”€ provider              â†’    ProviderConfig
 *   â”œâ”€ approvalPolicy (String) â†’ ApprovalPolicy (Enum)
 *   â”œâ”€ reasoningEffort (String) â†’ ReasoningEffort (Enum)
 *   â””â”€ mcpServers (Map)       â†’    map&lt;string, McpServerConfig&gt;
 * </pre>
 *
 * @see AgentConfigEntity
 * @see codex.agent.SessionConfig
 */
@Slf4j
public class ConfigProtoConverter {

    private static final ObjectMapper objectMapper = new ObjectMapper();

    /**
     * å°†AgentConfigEntityè½¬æ¢ä¸ºSessionConfig (Proto)
     *
     * @param entity Agenté…ç½®å®ä½“
     * @return SessionConfig Protoå®ä¾‹
     */
    public static SessionConfig toSessionConfig(AgentConfigEntity entity) {
        if (entity == null) {
            log.warn("AgentConfigEntity ä¸º null,è¿”å›ç©ºçš„ SessionConfig");
            return SessionConfig.getDefaultInstance();
        }

        SessionConfig.Builder builder = SessionConfig.newBuilder();

        // 1. åŸºç¡€ç¯å¢ƒé…ç½®
        if (entity.getProvider() != null) {
            builder.setProvider(toProviderConfig(entity.getProvider()));
        }
        if (entity.getLlmModel() != null) {
            builder.setModel(entity.getLlmModel());
        }
        if (entity.getCwd() != null) {
            builder.setCwd(entity.getCwd());
        }

        // 2. ç­–ç•¥é…ç½® (æšä¸¾è½¬æ¢)
        if (entity.getApprovalPolicy() != null) {
            builder.setApprovalPolicy(parseApprovalPolicy(entity.getApprovalPolicy()));
        }
        if (entity.getSandboxPolicy() != null) {
            builder.setSandboxPolicy(parseSandboxPolicy(entity.getSandboxPolicy()));
        }

        // 3. æŒ‡ä»¤é…ç½®
        if (entity.getDeveloperInstructions() != null) {
            builder.setDeveloperInstructions(entity.getDeveloperInstructions());
        }
        if (entity.getUserInstructions() != null) {
            builder.setUserInstructions(entity.getUserInstructions());
        }
        if (entity.getBaseInstructions() != null) {
            builder.setBaseInstructions(entity.getBaseInstructions());
        }

        // 4. æ¨ç†é…ç½® (æšä¸¾è½¬æ¢)
        if (entity.getReasoningEffort() != null) {
            builder.setModelReasoningEffort(parseReasoningEffort(entity.getReasoningEffort()));
        }
        if (entity.getReasoningSummary() != null) {
            builder.setModelReasoningSummary(parseReasoningSummary(entity.getReasoningSummary()));
        }

        // 5. æç¤ºè¯ä¼˜åŒ–
        if (entity.getCompactPrompt() != null) {
            builder.setCompactPrompt(entity.getCompactPrompt());
        }

        // 6. æ¨¡å‹èƒ½åŠ›è¦†ç›–
        if (entity.getModelOverrides() != null) {
            builder.setModelOverrides(toModelOverrides(entity.getModelOverrides()));
        }

        // 7. MCPæœåŠ¡å™¨é…ç½® (ä¼˜å…ˆä½¿ç”¨ mcpConfigJson)
        if (entity.getMcpConfigJson() != null && !entity.getMcpConfigJson().isEmpty()) {
            try {
                JsonNode rootNode = objectMapper.readTree(entity.getMcpConfigJson());
                // å…¼å®¹é€»è¾‘ï¼šå¦‚æœ JSON åŒ…å« "mcpServers" æ ¹èŠ‚ç‚¹ï¼Œåˆ™è¿›å…¥è¯¥èŠ‚ç‚¹è§£æ
                JsonNode configNode = rootNode.has("mcpServers") ? rootNode.get("mcpServers") : rootNode;
                
                Map<String, McpServerConfigDTO> mcpDtoMap = objectMapper.convertValue(
                        configNode,
                        new TypeReference<Map<String, McpServerConfigDTO>>() {}
                );
                
                mcpDtoMap.forEach((name, config) -> {
                    McpServerConfig mcpProto = toMcpServerFromDto(config);
                    builder.putMcpServers(name, mcpProto);
                });
                log.info("ä»JSONè§£æMCPé…ç½®æˆåŠŸ: count={}", mcpDtoMap.size());
            } catch (Exception e) {
                log.error("è§£æMCP JSONé…ç½®å¤±è´¥: {}", entity.getMcpConfigJson(), e);
            }
        } 
        
        // å›é€€é€»è¾‘ï¼šå¦‚æœ map ä¸ºç©ºä¸” mcpServers å­—æ®µæœ‰å€¼ï¼Œåˆ™ä½¿ç”¨æ—§å­—æ®µ
        if (builder.getMcpServersCount() == 0 && entity.getMcpServers() != null && !entity.getMcpServers().isEmpty()) {
            entity.getMcpServers().forEach((name, config) -> {
                McpServerConfig mcpProto = toMcpServerConfig(config);
                builder.putMcpServers(name, mcpProto);
            });
        }

        // 8. ä¼šè¯æ¥æº
        if (entity.getSessionSource() != null) {
            builder.setSessionSource(toSessionSource(entity.getSessionSource()));
        }

        SessionConfig config = builder.build();
        log.debug("AgentConfigEntity è½¬æ¢ä¸º SessionConfig: model={}, approvalPolicy={}",
                config.getModel(), config.getApprovalPolicy());

        return config;
    }

    /**
     * è½¬æ¢ProviderConfig
     */
    private static ProviderConfig toProviderConfig(ProviderConfigVO apiProvider) {
        if (apiProvider == null) {
            return ProviderConfig.getDefaultInstance();
        }

        ProviderConfig.Builder builder = ProviderConfig.newBuilder()
                .setName(apiProvider.getName());

        if (apiProvider.getBaseUrl() != null) {
            builder.setBaseUrl(apiProvider.getBaseUrl());
        }
        if (apiProvider.getApiKey() != null) {
            builder.setApiKey(apiProvider.getApiKey());
        }
        if (apiProvider.getWireApi() != null) {
            builder.setWireApi(apiProvider.getWireApi());
        }

        return builder.build();
    }

    /**
     * è½¬æ¢McpServerConfig (ä» VO)
     */
    private static McpServerConfig toMcpServerConfig(McpServerConfigVO apiConfig) {
        if (apiConfig == null) {
            return McpServerConfig.getDefaultInstance();
        }

        McpServerConfig.Builder builder = McpServerConfig.newBuilder()
                .setCommand(apiConfig.getCommand());

        if (apiConfig.getArgs() != null) {
            builder.addAllArgs(apiConfig.getArgs());
        }
        if (apiConfig.getEnv() != null) {
            builder.putAllEnv(apiConfig.getEnv());
        }

        return builder.build();
    }

    /**
     * è½¬æ¢McpServerConfig (ä» DTO)
     */
    private static McpServerConfig toMcpServerFromDto(McpServerConfigDTO apiConfig) {
        if (apiConfig == null) {
            return McpServerConfig.getDefaultInstance();
        }

        McpServerConfig.Builder builder = McpServerConfig.newBuilder()
                .setCommand(apiConfig.getCommand());

        if (apiConfig.getArgs() != null) {
            builder.addAllArgs(apiConfig.getArgs());
        }
        if (apiConfig.getEnv() != null) {
            builder.putAllEnv(apiConfig.getEnv());
        }

        return builder.build();
    }

    /**
     * è½¬æ¢ModelOverrides
     */
    private static ModelOverrides toModelOverrides(ModelOverridesVO apiModelOverrides) {
        if (apiModelOverrides == null) {
            return ModelOverrides.getDefaultInstance();
        }

        ModelOverrides.Builder builder = ModelOverrides.newBuilder();

        if (apiModelOverrides.getShellType() != null) {
            builder.setShellType(apiModelOverrides.getShellType());
        }
        if (apiModelOverrides.getSupportsParallelToolCalls() != null) {
            builder.setSupportsParallelToolCalls(apiModelOverrides.getSupportsParallelToolCalls());
        }
        if (apiModelOverrides.getApplyPatchToolType() != null) {
            builder.setApplyPatchToolType(apiModelOverrides.getApplyPatchToolType());
        }
        if (apiModelOverrides.getContextWindow() != null) {
            builder.setContextWindow(apiModelOverrides.getContextWindow());
        }
        if (apiModelOverrides.getAutoCompactTokenLimit() != null) {
            builder.setAutoCompactTokenLimit(apiModelOverrides.getAutoCompactTokenLimit());
        }

        return builder.build();
    }

    /**
     * è½¬æ¢SessionSource
     */
    private static SessionSource toSessionSource(SessionSourceVO apiSessionSource) {
        if (apiSessionSource == null) {
            return SessionSource.getDefaultInstance();
        }

        SessionSource.Builder builder = SessionSource.newBuilder()
                .setSourceType(apiSessionSource.getSourceType());

        if (apiSessionSource.getIntegrationName() != null) {
            builder.setIntegrationName(apiSessionSource.getIntegrationName());
        }
        if (apiSessionSource.getIntegrationVersion() != null) {
            builder.setIntegrationVersion(apiSessionSource.getIntegrationVersion());
        }

        return builder.build();
    }

    // ============================================================
    // æšä¸¾è½¬æ¢æ–¹æ³•
    // ============================================================

    /**
     * è§£æå®¡æ‰¹ç­–ç•¥ (String â†’ Enum)
     */
    private static ApprovalPolicy parseApprovalPolicy(String policy) {
        if (policy == null || policy.isEmpty()) {
            return ApprovalPolicy.AUTO_APPROVE;
        }

        return switch (policy.toUpperCase()) {
            case "AUTO_APPROVE", "AUTO" -> ApprovalPolicy.AUTO_APPROVE;
            case "MANUAL_APPROVE", "MANUAL" -> ApprovalPolicy.MANUAL_APPROVE;
            case "BLOCK_ALL", "BLOCKED" -> ApprovalPolicy.BLOCK_ALL;
            default -> {
                log.warn("æœªçŸ¥çš„å®¡æ‰¹ç­–ç•¥: {}, ä½¿ç”¨é»˜è®¤å€¼ AUTO_APPROVE", policy);
                yield ApprovalPolicy.AUTO_APPROVE;
            }
        };
    }

    /**
     * è§£ææ²™ç®±ç­–ç•¥ (String â†’ Enum)
     */
    private static SandboxPolicy parseSandboxPolicy(String policy) {
        if (policy == null || policy.isEmpty()) {
            return SandboxPolicy.SANDBOXED;
        }

        return switch (policy.toUpperCase()) {
            case "READ_ONLY" -> SandboxPolicy.READ_ONLY;
            case "SANDBOXED", "SANDBOX" -> SandboxPolicy.SANDBOXED;
            case "INSECURE" -> SandboxPolicy.INSECURE;
            default -> {
                log.warn("æœªçŸ¥çš„æ²™ç®±ç­–ç•¥: {}, ä½¿ç”¨é»˜è®¤å€¼ SANDBOXED", policy);
                yield SandboxPolicy.SANDBOXED;
            }
        };
    }

    /**
     * è§£ææ¨ç†å¼ºåº¦ (String â†’ Enum)
     */
    private static ReasoningEffort parseReasoningEffort(String effort) {
        if (effort == null || effort.isEmpty()) {
            return ReasoningEffort.REASONING_NONE;
        }

        return switch (effort.toUpperCase()) {
            case "REASONING_NONE", "NONE" -> ReasoningEffort.REASONING_NONE;
            case "MINIMAL" -> ReasoningEffort.MINIMAL;
            case "LOW" -> ReasoningEffort.LOW;
            case "MEDIUM" -> ReasoningEffort.MEDIUM;
            case "HIGH" -> ReasoningEffort.HIGH;
            default -> {
                log.warn("æœªçŸ¥çš„æ¨ç†å¼ºåº¦: {}, ä½¿ç”¨é»˜è®¤å€¼ REASONING_NONE", effort);
                yield ReasoningEffort.REASONING_NONE;
            }
        };
    }

    /**
     * è§£ææ¨ç†æ‘˜è¦æ¨¡å¼ (String â†’ Enum)
     */
    private static ReasoningSummary parseReasoningSummary(String summary) {
        if (summary == null || summary.isEmpty()) {
            return ReasoningSummary.AUTO;
        }

        return switch (summary.toUpperCase()) {
            case "AUTO" -> ReasoningSummary.AUTO;
            case "CONCISE" -> ReasoningSummary.CONCISE;
            case "DETAILED" -> ReasoningSummary.DETAILED;
            case "REASONING_SUMMARY_NONE", "NONE" -> ReasoningSummary.REASONING_SUMMARY_NONE;
            default -> {
                log.warn("æœªçŸ¥çš„æ¨ç†æ‘˜è¦æ¨¡å¼: {}, ä½¿ç”¨é»˜è®¤å€¼ AUTO", summary);
                yield ReasoningSummary.AUTO;
            }
        };
    }
}