package com.deepknow.agentoz.infra.converter.grpc;

import com.deepknow.agentoz.dto.MessageDTO;
import com.deepknow.agentoz.infra.adapter.grpc.*;
import lombok.extern.slf4j.Slf4j;

import java.util.List;
import java.util.stream.Collectors;

/**
 * å†å²æ¶ˆæ¯è½¬æ¢å™¨
 *
 * <p>è´Ÿè´£å°†ä¸šåŠ¡å±‚çš„MessageDTOè½¬æ¢ä¸ºCodex-Agentçš„HistoryItem (Proto)ã€‚</p>
 *
 * <h3>ğŸ”„ è½¬æ¢æ˜ å°„</h3>
 * <pre>
 * MessageDTO              â†’  HistoryItem (oneof)
 *   â”œâ”€ role = "user"      â†’    MessageItem (role="user", content=...)
 *   â”œâ”€ role = "assistant" â†’    MessageItem (role="assistant", content=...)
 *   â””â”€ content            â†’    ContentItem (text=...)
 * </pre>
 *
 * <h3>ğŸ“¦ æ”¯æŒçš„æ¶ˆæ¯ç±»å‹</h3>
 * <ul>
 *   <li>æ™®é€šæ¶ˆæ¯ - MessageItem (role + text content)</li>
 *   <li>å‡½æ•°è°ƒç”¨ - FunctionCallItem (æš‚æœªå®ç°)</li>
 *   <li>å‡½æ•°è¿”å› - FunctionCallOutputItem (æš‚æœªå®ç°)</li>
 * </ul>
 *
 * @see MessageDTO
 * @see HistoryItem
 */
@Slf4j
public class HistoryProtoConverter {

    /**
     * å°†å•ä¸ªMessageDTOè½¬æ¢ä¸ºHistoryItem (Proto)
     *
     * @param dto æ¶ˆæ¯DTO
     * @return HistoryItemå®ä¾‹
     */
    public static HistoryItem toHistoryItem(MessageDTO dto) {
        if (dto == null) {
            log.warn("MessageDTO ä¸º null,è¿”å›ç©º HistoryItem");
            return HistoryItem.getDefaultInstance();
        }

        // 1. æ„å»ºContentItem (ç›®å‰åªæ”¯æŒæ–‡æœ¬)
        ContentItem contentItem = ContentItem.newBuilder()
                .setText(dto.getContent())
                .build();

        // 2. æ„å»ºMessageItem
        MessageItem messageItem = MessageItem.newBuilder()
                .setRole(dto.getRole()) // "user" | "assistant" | "system"
                .addContent(contentItem)
                .build();

        // 3. åŒ…è£…ä¸ºHistoryItem (oneofç±»å‹)
        HistoryItem historyItem = HistoryItem.newBuilder()
                .setMessage(messageItem)
                .build();

        log.debug("MessageDTO è½¬æ¢ä¸º HistoryItem: role={}, contentLength={}",
                dto.getRole(), dto.getContent() != null ? dto.getContent().length() : 0);

        return historyItem;
    }

    /**
     * æ‰¹é‡è½¬æ¢MessageDTOåˆ—è¡¨
     *
     * @param dtos MessageDTOåˆ—è¡¨
     * @return HistoryItemåˆ—è¡¨
     */
    public static List<HistoryItem> toHistoryItemList(List<MessageDTO> dtos) {
        if (dtos == null || dtos.isEmpty()) {
            log.debug("MessageDTOåˆ—è¡¨ä¸ºç©º,è¿”å›ç©ºåˆ—è¡¨");
            return List.of();
        }

        return dtos.stream()
                .map(HistoryProtoConverter::toHistoryItem)
                .collect(Collectors.toList());
    }

    /**
     * å°†HistoryItem (Proto) è½¬æ¢å›MessageDTO
     *
     * <p>ç”¨äºå°†Codex-Agentè¿”å›çš„å“åº”è½¬æ¢ä¸ºä¸šåŠ¡å±‚DTOã€‚</p>
     *
     * @param historyItem Proto HistoryItem
     * @return MessageDTO
     */
    public static MessageDTO toMessageDTO(HistoryItem historyItem) {
        if (historyItem == null || !historyItem.hasMessage()) {
            log.warn("HistoryItem ä¸ºç©ºæˆ–ä¸æ˜¯Messageç±»å‹");
            return MessageDTO.builder()
                    .role("system")
                    .content("")
                    .build();
        }

        MessageItem messageItem = historyItem.getMessage();

        // æå–ç¬¬ä¸€ä¸ªContentItem (ç®€åŒ–å¤„ç†,å‡è®¾åªæœ‰æ–‡æœ¬)
        String content = "";
        if (messageItem.getContentCount() > 0) {
            ContentItem item = messageItem.getContent(0);
            content = item.getText();
        }

        return MessageDTO.builder()
                .role(messageItem.getRole())
                .content(content)
                .build();
    }

    /**
     * æ‰¹é‡è½¬æ¢HistoryItemåˆ—è¡¨ä¸ºMessageDTOåˆ—è¡¨
     *
     * @param historyItems Proto HistoryItemåˆ—è¡¨
     * @return MessageDTOåˆ—è¡¨
     */
    public static List<MessageDTO> toMessageDTOList(List<HistoryItem> historyItems) {
        if (historyItems == null || historyItems.isEmpty()) {
            return List.of();
        }

        return historyItems.stream()
                .map(HistoryProtoConverter::toMessageDTO)
                .collect(Collectors.toList());
    }
}