package com.deepknow.agentoz.infra.converter.grpc;

import com.deepknow.agentoz.api.dto.TaskResponse;
import codex.agent.RunTaskResponse;
import com.fasterxml.jackson.databind.JsonNode;
import com.fasterxml.jackson.databind.ObjectMapper;
import lombok.extern.slf4j.Slf4j;
import org.springframework.stereotype.Component;

/**
 * ä»»åŠ¡å“åº”è½¬æ¢å™¨ï¼ˆå¯¹é½ adapter.proto äº‹ä»¶é©±åŠ¨æ¨¡å¼ï¼‰
 *
 * <h3>ğŸ”„ å“åº”äº‹ä»¶ç±»å‹ (oneof event)</h3>
 * <ul>
 *   <li>codex_event_json - åŸå§‹ Codex JSONL äº‹ä»¶ï¼ˆæ€è€ƒè¿‡ç¨‹ã€å·¥å…·è°ƒç”¨ç­‰ï¼‰</li>
 *   <li>adapter_log - ç³»ç»Ÿæ—¥å¿—</li>
 *   <li>error - é”™è¯¯ä¿¡æ¯</li>
 *   <li>updated_rollout - æœ€ç»ˆä¼šè¯çŠ¶æ€æ•°æ®ï¼ˆJSONL bytesï¼‰</li>
 * </ul>
 *
 * <h3>ğŸ“¦ codex_event_json æ ¼å¼</h3>
 * <p>æ¯ä¸ªäº‹ä»¶æ˜¯ä¸€ä¸ª JSON å¯¹è±¡ï¼Œå¯èƒ½åŒ…å«ï¼š</p>
 * <pre>
 * {"type": "message", "role": "assistant", "content": [...]}
 * {"type": "function_call", "name": "...", "arguments": "..."}
 * {"type": "reasoning", "summary": [...]}
 * </pre>
 */
@Slf4j
@Component
public class TaskResponseProtoConverter {

    private static final ObjectMapper objectMapper = new ObjectMapper();

    /**
     * è½¬æ¢ RunTaskResponse (Proto) â†’ TaskResponse (DTO)
     *
     * <p>æ–°ç‰ˆ Proto ä½¿ç”¨ oneof event ç»“æ„ï¼Œéœ€è¦æ ¹æ®äº‹ä»¶ç±»å‹åˆ†åˆ«å¤„ç†</p>
     *
     * @param protoResponse Codex-Agent è¿”å›çš„ Proto å“åº”
     * @return API å±‚çš„ TaskResponse DTO
     */
    public static TaskResponse toTaskResponse(RunTaskResponse protoResponse) {
        if (protoResponse == null) {
            return null;
        }

        TaskResponse dto = new TaskResponse();

        // æ ¹æ® oneof event ç±»å‹å¤„ç†
        RunTaskResponse.EventCase eventCase = protoResponse.getEventCase();

        switch (eventCase) {
            case CODEX_EVENT_JSON -> {
                // åŸå§‹ Codex JSONL äº‹ä»¶
                String eventJson = protoResponse.getCodexEventJson();
                dto.setStatus("PROCESSING");
                parseCodexEventJson(eventJson, dto);
            }
            case ADAPTER_LOG -> {
                // ç³»ç»Ÿæ—¥å¿—ï¼ˆé€šå¸¸ç”¨äºè°ƒè¯•ï¼‰
                String logMessage = protoResponse.getAdapterLog();
                dto.setStatus("PROCESSING");
                // å¯ä»¥é€‰æ‹©å¿½ç•¥æ—¥å¿—æˆ–æ”¾å…¥ç‰¹å®šå­—æ®µ
                log.debug("Adapter log: {}", logMessage);
            }
            case ERROR -> {
                // é”™è¯¯ä¿¡æ¯
                String errorMessage = protoResponse.getError();
                dto.setStatus("ERROR");
                dto.setErrorMessage(errorMessage);
                log.error("Codex error: {}", errorMessage);
            }
            case UPDATED_ROLLOUT -> {
                // æœ€ç»ˆä¼šè¯çŠ¶æ€æ•°æ® - è¿™æ˜¯æµç»“æŸçš„æ ‡å¿—
                // å­—èŠ‚æ•°æ®ç”±è°ƒç”¨æ–¹ç›´æ¥å¤„ç†ï¼Œè¿™é‡Œä»…æ ‡è®°çŠ¶æ€
                dto.setStatus("FINISHED");
                dto.setUpdatedRollout(protoResponse.getUpdatedRollout().toByteArray());
                log.info("Received updated rollout: {} bytes", protoResponse.getUpdatedRollout().size());
            }
            case EVENT_NOT_SET -> {
                // æœªè®¾ç½®äº‹ä»¶ç±»å‹
                log.warn("Received response with no event set");
            }
        }

        return dto;
    }

    /**
     * è§£æ Codex äº‹ä»¶ JSON å¹¶å¡«å……åˆ° DTO
     *
     * <p>Codex äº‹ä»¶å¯èƒ½åŒ…å«å¤šç§ç±»å‹ï¼š</p>
     * <ul>
     *   <li>message - æ¶ˆæ¯ï¼ˆåŒ…å« text_delta æˆ–å®Œæ•´ contentï¼‰</li>
     *   <li>function_call - å·¥å…·è°ƒç”¨</li>
     *   <li>reasoning - æ¨ç†è¿‡ç¨‹</li>
     *   <li>ç­‰ç­‰</li>
     * </ul>
     */
    private static void parseCodexEventJson(String eventJson, TaskResponse dto) {
        if (eventJson == null || eventJson.isEmpty()) {
            return;
        }

        try {
            JsonNode event = objectMapper.readTree(eventJson);

            // æ£€æµ‹äº‹ä»¶ç±»å‹
            String type = event.has("type") ? event.get("type").asText() : null;

            if (type == null) {
                // å¯èƒ½æ˜¯å¢é‡äº‹ä»¶æ ¼å¼
                if (event.has("delta")) {
                    JsonNode delta = event.get("delta");
                    if (delta.has("text")) {
                        dto.setTextDelta(delta.get("text").asText());
                    }
                    if (delta.has("reasoning")) {
                        dto.setReasoningDelta(delta.get("reasoning").asText());
                    }
                }
                return;
            }

            switch (type) {
                case "message" -> {
                    // æ¶ˆæ¯äº‹ä»¶
                    String role = event.has("role") ? event.get("role").asText() : null;
                    if ("assistant".equals(role) && event.has("content")) {
                        // æå–æ–‡æœ¬å†…å®¹
                        JsonNode content = event.get("content");
                        if (content.isArray()) {
                            StringBuilder text = new StringBuilder();
                            for (JsonNode item : content) {
                                if (item.has("text")) {
                                    text.append(item.get("text").asText());
                                }
                            }
                            if (!text.isEmpty()) {
                                dto.setFinalResponse(text.toString());
                            }
                        }
                    }
                }
                case "content_part" -> {
                    // å¢é‡å†…å®¹äº‹ä»¶
                    if (event.has("text")) {
                        dto.setTextDelta(event.get("text").asText());
                    }
                }
                case "reasoning" -> {
                    // æ¨ç†äº‹ä»¶
                    if (event.has("summary")) {
                        JsonNode summary = event.get("summary");
                        if (summary.isArray() && summary.size() > 0) {
                            StringBuilder reasoning = new StringBuilder();
                            for (JsonNode item : summary) {
                                if (item.has("text")) {
                                    reasoning.append(item.get("text").asText());
                                }
                            }
                            dto.setReasoningDelta(reasoning.toString());
                        }
                    }
                }
                case "function_call", "custom_tool_call" -> {
                    // å·¥å…·è°ƒç”¨äº‹ä»¶ - ä¿å­˜åŸå§‹ JSON ä¾›ä¸Šå±‚å¤„ç†
                    log.debug("Tool call event: {}", type);
                }
                case "function_call_output", "custom_tool_call_output" -> {
                    // å·¥å…·è¿”å›äº‹ä»¶
                    log.debug("Tool output event: {}", type);
                }
                default -> {
                    log.debug("Unknown event type: {}", type);
                }
            }

        } catch (Exception e) {
            log.warn("Failed to parse codex event JSON: {}", e.getMessage());
            // ä½œä¸ºåŸå§‹æ–‡æœ¬å¤„ç†
            dto.setTextDelta(eventJson);
        }
    }

    /**
     * æ£€æŸ¥å“åº”æ˜¯å¦ä¸ºæµç»“æŸäº‹ä»¶
     *
     * @param protoResponse Proto å“åº”
     * @return å¦‚æœæ˜¯ updated_rollout æˆ– error åˆ™è¿”å› true
     */
    public static boolean isStreamEnd(RunTaskResponse protoResponse) {
        if (protoResponse == null) {
            return false;
        }
        RunTaskResponse.EventCase eventCase = protoResponse.getEventCase();
        return eventCase == RunTaskResponse.EventCase.UPDATED_ROLLOUT
                || eventCase == RunTaskResponse.EventCase.ERROR;
    }

    /**
     * æå–æ›´æ–°åçš„ä¼šè¯çŠ¶æ€æ•°æ®
     *
     * @param protoResponse Proto å“åº”
     * @return å¦‚æœæ˜¯ updated_rollout äº‹ä»¶åˆ™è¿”å›å­—èŠ‚æ•°ç»„ï¼Œå¦åˆ™è¿”å› null
     */
    public static byte[] extractUpdatedRollout(RunTaskResponse protoResponse) {
        if (protoResponse == null) {
            return null;
        }
        if (protoResponse.getEventCase() == RunTaskResponse.EventCase.UPDATED_ROLLOUT) {
            return protoResponse.getUpdatedRollout().toByteArray();
        }
        return null;
    }
}
