package com.deepknow.agentoz.model;

import com.baomidou.mybatisplus.annotation.*;
import com.baomidou.mybatisplus.extension.handlers.JacksonTypeHandler;
import com.deepknow.agentoz.dto.config.ModelProviderInfoVO;
import lombok.Data;
import lombok.Builder;
import lombok.NoArgsConstructor;
import lombok.AllArgsConstructor;

import java.time.LocalDateTime;

/**
 * Agenté…ç½®å®ä½“ - å¯¹é½ Codex Adapter çš„ SessionConfig
 *
 * <p>è¿™ä¸ªå®ä½“å­˜å‚¨äº†ä¼ é€’ç»™ Codex-Agent è®¡ç®—èŠ‚ç‚¹çš„æ‰€æœ‰é…ç½®å‚æ•°ï¼Œ
 * å®Œå…¨å¯¹åº” Proto å®šä¹‰ä¸­çš„ {@code SessionConfig} æ¶ˆæ¯ã€‚</p>
 *
 * <h3>ğŸ”„ ä¸ AgentEntity çš„å…³ç³»</h3>
 * <ul>
 *   <li>ä¸€ä¸ª AgentConfig å¯ä»¥è¢«å¤šä¸ª Agent å…±äº«ï¼ˆé…ç½®å¤ç”¨ï¼‰</li>
 *   <li>AgentEntity é€šè¿‡ {@code configId} å…³è”åˆ°æ­¤å®ä½“</li>
 *   <li>æ”¯æŒé…ç½®æ¨¡æ¿æœºåˆ¶ï¼ˆé¢„è®¾çš„å¸¸ç”¨é…ç½®ï¼‰</li>
 * </ul>
 *
 * <h3>ğŸ“¦ é…ç½®åˆ†ç±» (å¯¹é½ adapter.proto)</h3>
 * <ol>
 *   <li>æ¨¡å‹é…ç½® - model, model_provider, provider_info</li>
 *   <li>ç­–ç•¥é…ç½® - approval_policy, sandbox_policy</li>
 *   <li>æŒ‡ä»¤é…ç½® - instructions, developer_instructions</li>
 *   <li>MCPé…ç½® - mcp_servers (JSON)</li>
 *   <li>å·¥ä½œç›®å½• - cwd</li>
 * </ol>
 *
 * <h3>ğŸ¯ Proto æ˜ å°„ (adapter.proto)</h3>
 * <pre>
 * Proto: SessionConfig              â†’ Java: AgentConfigEntity
 *   â”œâ”€ string model                 â†’   â”œâ”€ String llmModel
 *   â”œâ”€ string model_provider        â†’   â”œâ”€ String modelProvider
 *   â”œâ”€ ModelProviderInfo provider_info â†’ â”œâ”€ ModelProviderInfoVO providerInfo
 *   â”œâ”€ string instructions          â†’   â”œâ”€ String userInstructions
 *   â”œâ”€ string developer_instructionsâ†’   â”œâ”€ String developerInstructions
 *   â”œâ”€ ApprovalPolicy               â†’   â”œâ”€ String approvalPolicy
 *   â”œâ”€ SandboxPolicy                â†’   â”œâ”€ String sandboxPolicy
 *   â”œâ”€ string cwd                   â†’   â”œâ”€ String cwd
 *   â””â”€ map&lt;string, McpServerDef&gt;   â†’   â””â”€ String mcpConfigJson
 * </pre>
 *
 * @see AgentEntity
 * @see codex.agent.SessionConfig
 */
@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
@TableName(value = "agent_configs", autoResultMap = true)
public class AgentConfigEntity {

    @TableId(type = IdType.AUTO)
    private Long id;

    /**
     * é…ç½®å”¯ä¸€æ ‡è¯†
     * æ ¼å¼: "cfg-{timestamp}-{random}"
     */
    private String configId;

    /**
     * é…ç½®åç§°ï¼ˆäººç±»å¯è¯»ï¼‰
     * ç¤ºä¾‹: "Qwen-Max-é«˜æ¨ç†æ¨¡å¼", "GPT-4o-ä»£ç åŠ©æ‰‹"
     */
    private String configName;

    // ============================================================
    // 1. æ¨¡å‹é…ç½® - Model Configuration (å¯¹é½ adapter.proto)
    // ============================================================

    /**
     * æ¨¡å‹åç§°
     * å¯¹åº” Proto: string model
     * ç¤ºä¾‹: "qwen-max", "gpt-4o", "deepseek-chat"
     */
    @TableField("llm_model")
    private String llmModel;

    /**
     * æ¨¡å‹æä¾›å•†åç§°
     * å¯¹åº” Proto: string model_provider
     * ç¤ºä¾‹: "openai", "qwen", "deepseek"
     */
    private String modelProvider;

    /**
     * æ¨¡å‹æä¾›å•†è¯¦ç»†é…ç½®
     * å¯¹åº” Proto: ModelProviderInfo provider_info
     */
    @TableField(typeHandler = JacksonTypeHandler.class)
    private ModelProviderInfoVO providerInfo;

    /**
     * å·¥ä½œç›®å½•ï¼ˆç»å¯¹è·¯å¾„ï¼‰
     * å¯¹åº” Proto: string cwd
     * ç¤ºä¾‹: "/workspace/coder-agent", "/workspace/analyst"
     */
    private String cwd;

    // ============================================================
    // 2. ç­–ç•¥é…ç½® - Policy Configuration
    // ============================================================

    /**
     * å®¡æ‰¹ç­–ç•¥
     * å¯¹åº” Proto: ApprovalPolicy approval_policy
     * æšä¸¾å€¼: "ALWAYS", "NEVER", "UNLESS_TRUSTED"
     */
    private String approvalPolicy;

    /**
     * æ²™ç®±ç­–ç•¥
     * å¯¹åº” Proto: SandboxPolicy sandbox_policy
     * æšä¸¾å€¼: "WORKSPACE_WRITE", "READ_ONLY", "DANGER_FULL_ACCESS"
     */
    private String sandboxPolicy;

    // ============================================================
    // 3. æŒ‡ä»¤é…ç½® - Instructions Configuration
    // ============================================================

    /**
     * å¼€å‘è€…æŒ‡ä»¤ï¼ˆæœ€é«˜ä¼˜å…ˆçº§ï¼‰
     * å¯¹åº” Proto: string developer_instructions
     * ç”¨äºåº•å±‚æ§åˆ¶é€»è¾‘ï¼Œæ™®é€šç”¨æˆ·ä¸å¯è§
     */
    private String developerInstructions;

    /**
     * ç”¨æˆ·æŒ‡ä»¤
     * å¯¹åº” Proto: string instructions
     * ç»™ Agent çš„ä¸šåŠ¡çº§æŒ‡ä»¤
     */
    private String userInstructions;

    // ============================================================
    // 4. MCP é…ç½® - MCP Server Configuration
    // ============================================================

    /**
     * MCP æœåŠ¡å™¨é…ç½® (JSON å­—ç¬¦ä¸²æ ¼å¼)
     *
     * <p>å­˜å‚¨ MCP æœåŠ¡å™¨é…ç½®ï¼Œæ ¼å¼ä¸º JSON å¯¹è±¡ï¼Œkey ä¸ºæœåŠ¡å™¨åç§°ï¼Œvalue ä¸º McpServerDef</p>
     *
     * <h3>ğŸ“¦ æ ¼å¼ç¤ºä¾‹</h3>
     * <pre>
     * {
     *   "filesystem": {
     *     "server_type": "stdio",
     *     "command": "npx",
     *     "args": ["-y", "@modelcontextprotocol/server-filesystem", "/allowed/path"],
     *     "env": {}
     *   },
     *   "github": {
     *     "server_type": "streamable_http",
     *     "url": "https://api.github.com/mcp"
     *   }
     * }
     * </pre>
     *
     * <p>âš ï¸ è½¬æ¢å™¨ä¼šå°†æ­¤ JSON è§£æä¸º {@code map<string, McpServerDef>}</p>
     */
    private String mcpConfigJson;

    // ============================================================
    // 5. å…ƒæ•°æ®ä¸ç”Ÿå‘½å‘¨æœŸ
    // ============================================================

    /**
     * æ˜¯å¦ä¸ºé¢„è®¾æ¨¡æ¿
     * true - ç³»ç»Ÿé¢„è®¾é…ç½®ï¼Œä¸å¯åˆ é™¤
     * false - ç”¨æˆ·è‡ªå®šä¹‰é…ç½®
     */
    private Boolean isTemplate;

    /**
     * é…ç½®æ ‡ç­¾ï¼ˆé€—å·åˆ†éš”ï¼‰
     * ç¤ºä¾‹: "coding,high-reasoning", "analysis,low-cost"
     */
    private String tags;

    /**
     * é…ç½®æè¿°
     */
    private String description;

    /**
     * æ‰©å±•å…ƒæ•°æ®ï¼ˆJSONæ ¼å¼ï¼‰
     * ç”¨äºå­˜å‚¨æœªé¢„å®šä¹‰çš„æ‰©å±•å­—æ®µ
     */
    private String metadata;

    private LocalDateTime createdAt;
    private LocalDateTime updatedAt;
    private LocalDateTime lastUsedAt;

    /**
     * åˆ›å»ºè€…ç”¨æˆ·ID
     */
    private String createdBy;
}
